# Objektbuch

./: README.md  meson.build
include/objektbuch/: meta.hpp  objectbook.hpp
testing/: test_compile.cpp
